--- a/website/apps/alibrary/templates/alibrary/playlist_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_edit.html
@@ -125,8 +125,20 @@
 			</div>
 
 			<div class="tab-pane" id="tracklist_editor">
-				<!-- Editor Include -->
+				
+				{% if object.type != "broadcast"  %}
 				{% include "alibrary/playlist/_tracklist_editor.html" %}
+				{% else %}
+				
+					<div class="alert alert-info">
+					
+					  <h4>{% trans "Playlist editing blocked" %}</h4>
+					  {% blocktrans %}
+					  This broadcast has already ben sheduled or played. To edit this tracklist you will have to convert this broadcast to a playlist.
+					  {% endblocktrans %}
+					</div>
+					
+				{% endif %}
 			</div>
 			
 			
