--- a/website/site-static/sass/_style.sass
+++ b/website/site-static/sass/_style.sass
@@ -1467,7 +1467,7 @@ a#tagcloud_inline_toggle
   background-image: url(/static/img/base/tagcloud.open_close.png)
   background-repeat: no-repeat
   background-position: right top
-  padding: 0 18px 0 0
+  padding: 0 18px 0 0 !important
   &.active
     background-position: right -16px
 
