--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,6 +40,8 @@
 			// local / window-dependent container
 			var	local = local || {};
 			local.type = 'main';
+			
+			var nj;
 
 			
 			// javascript init / user interface
@@ -48,6 +50,9 @@
 				// passing some usefull variables for later use in js
 				asite.vars.aplayer_width = 630;
 				asite.vars.aplayer_height = 630;
+				
+
+				
 
 				asite.base.init();
 
