--- a/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_detail.html
@@ -23,7 +23,8 @@
 		<ul class="unstyled">
 			
 			<!-- Menu element / Action -->
-			{% if perms.alibrary.change_release %}
+			{# if perms.alibrary.change_release #}
+			{% if user.is_authenticated %}
 			<li class="link ">
 				<span class="left icon"><a href="{{ object.get_edit_url }}" title="{% trans "Edit" %}">{% trans "Edit" %}</a></span>
 				<span class="opt"></span>
@@ -55,7 +56,8 @@
 				<span class="left icon"> <a href="#release" title="Delete Selection">Delete Selection</a> </span>
 				<span class="opt"></span>
 				<span class="clear"></span>
-			</li><!-- Menu element / Action -->
+			</li>
+			<!-- Menu element / Action -->
 			<li class="action disabled selection_required selection_multiple selection_merge ">
 				<span class="left icon"> <a href="#release" title="Merge Selection">Merge Selection</a> </span>
 				<span class="opt"></span>
