--- a/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_edit.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/sidebar/context/_edit.html
@@ -9,7 +9,13 @@
 				<span class="opt"></span>
 				<span class="clear"></span>
 			</li>
-
+			
+			<li class="action {% if object.type != "broadcast"  %}disabled{% endif %} selection_single convert_playlist">
+				<span class="left icon"><a href="{% url alibrary-playlist-convert object.pk "playlist" %}" title="{% trans "Schedule for Broadcast" %}">{% trans "Schedule for Broadcast" %}</a> </span>
+				<span class="opt"></span>
+				<span class="clear"></span>
+			</li>
+			
 
 		</ul>
 	</div>
