--- a/website/apps/alibrary/templates/alibrary/playlist_detail.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_detail.html
@@ -34,6 +34,9 @@
 				<a href="#tracklist" data-toggle="tab">{% trans "Tracklist" %}</a>
 			</li>
 			<li>
+				<a href="#description" data-toggle="tab">{% trans "Description" %}</a>
+			</li>
+			<li>
 				<a href="#history" data-toggle="tab">{% trans "History" %}</a>
 			</li>
 		</ul>
@@ -106,6 +109,16 @@
 
 			</div>
 
+			<div class="tab-pane" id="description">
+				<section class="description">
+			
+					<div class="description markdown padded-h">
+						{% wikify object.description %}
+					</div>
+			
+				</section>
+			</div>
+
 			<div class="tab-pane" id="broadcasts">
 				...
 			</div>
@@ -113,29 +126,29 @@
 
 	</section>
 
-	<section class="description">
-
-		<div class="description markdown padded-h">
-			{# wikify object.description #}
-		</div>
-
-	</section>
 
 
-	<!-- comment testing -->
+
 	<section class="comments on-site">
-	{% if user.is_authenticated %}
-		{% render_comment_form for object %}
-	{% else %}
-		<p>Login to chat.</p>
-	{% endif %}
-	
-	<!-- TODO: maybe move to template tag.. just testing here... -->
-	{% with router=object.get_api_url %}
-	{% include "element/chat/_message_list.html" %}
-	{% endwith %}
-	
-	{% render_comment_list for object %}
+		
+		<div class="header">
+			<h3>{% trans "Comments" %}</h3>
+		</div>
+		
+		<div class="form">
+			{% if user.is_authenticated %}
+				{% render_comment_form for object %}
+			{% else %}
+				<p>{% trans "Please login to join the conversation" %}</p>
+			{% endif %}
+		</div>
+		
+		<!-- TODO: maybe move to template tag.. just testing here... -->
+		{% with router=object.get_api_url %}
+		{% include "element/chat/_message_list.html" %}
+		{% endwith %}
+		
+		{% render_comment_list for object %}
 	</section>
 	
 	<section class="comments disqus">
