--- a/website/apps/alibrary/templates/alibrary/templatetags/dayparts_inline.html
+++ b/website/apps/alibrary/templates/alibrary/templatetags/dayparts_inline.html
@@ -1,9 +1,9 @@
-{% for daypart in object.dayparts.all %}
+{% for item in object.dayparts.all %}
 
 <span>
-	{{ daypart.get_day_display }}
-	{{ daypart.time_start|date:"H:i" }} - 
-	{{ daypart.time_end|date:"H:i"  }}
+	{{ item.get_day_display }}
+	{{ item.time_start|date:"H:i" }} - 
+	{{ item.time_end|date:"H:i"  }}
 	{% if not forloop.last %}
 	|
 	{% endif %}
@@ -11,5 +11,3 @@
 
 
 {% endfor %}
-
-
