--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -1975,7 +1975,7 @@ a#tagcloud_inline_toggle {
   background-image: url(/static/img/base/tagcloud.open_close.png);
   background-repeat: no-repeat;
   background-position: right top;
-  padding: 0 18px 0 0;
+  padding: 0 18px 0 0 !important;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_style\.sass}line{font-family:\000031471}}
 a#tagcloud_inline_toggle.active {
@@ -5855,36 +5855,44 @@ div.row .sidebar div.jingle div.form select.default {
 }
 
 /* search */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\000034}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\000035}}
 div.autocomplete.holder {
   position: absolute;
-  width: 100%;
+  width: 830px;
   background-color: whitesmoke;
   z-index: 1001;
-  margin-top: 36px;
+  margin-top: 0px;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000312}}
 div.autocomplete.holder .result {
   padding: 0;
   border: 1px solid #999999;
+  border-top: none;
+  border-right: 1px solid #cccccc;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000316}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000318}}
 div.autocomplete.holder .result h1, div.autocomplete.holder .result h2, div.autocomplete.holder .result h3 {
   font-size: 12px !important;
+  line-height: 15px !important;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000319}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000322}}
 div.autocomplete.holder .result .linkable {
   cursor: pointer;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000322}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000325}}
 div.autocomplete.holder .result .search {
   padding: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000325}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000328}}
 div.autocomplete.holder .result .search h1 {
   margin-bottom: 0px !important;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000329}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000331}}
+div.autocomplete.holder .result .listing {
+  max-height: 491px;
+  overflow: auto;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000336}}
 div.autocomplete.holder .result .listing .item {
   border-top: 1px solid #cccccc;
   background-repeat: no-repeat;
@@ -5892,25 +5900,32 @@ div.autocomplete.holder .result .listing .item {
   padding: 5px;
   min-height: 42px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000337}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000344}}
 div.autocomplete.holder .result .listing .item h2 {
   text-transform: uppercase;
   margin-bottom: 0px !important;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000342}}
-div.autocomplete.holder .result .listing .item .related h3 {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000350}}
+div.autocomplete.holder .result .listing .item .related > span {
   float: left;
   margin-right: 4px;
   text-transform: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000355}}
+div.autocomplete.holder .result .listing .item .related ul {
+  list-style: none !important;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000357}}
+div.autocomplete.holder .result .listing .item .related ul li {
+  margin-right: 10px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000360}}
 div.autocomplete.holder .result .listing .item em.highlight {
   background: #ddffd9;
-  color: #00bb00;
-  padding: 0 2px;
-  font-style: normal;
+  padding: 0px;
+  font-style: italic;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000353}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/_search\.sass}line{font-family:\0000368}}
 div.autocomplete.holder .result .listing .item.hover {
   background-color: #ddffd9;
 }
@@ -13969,9 +13984,21 @@ div.listview.export .item.done .action.download a {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\000035}}
 section.comments.on-site {
   background-color: white !important;
+  margin-top: 24px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\000039}}
-section.comments.on-site form textarea {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000310}}
+section.comments.on-site #div_id_honeypot {
+  display: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000315}}
+section.comments.on-site div.header h3 {
+  text-transform: none;
+  font-weight: normal;
+  color: #5a5a5a;
+  font-size: 14px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000324}}
+section.comments.on-site div.form form textarea {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -13979,18 +14006,18 @@ section.comments.on-site form textarea {
   width: 100%;
   height: 48px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000315}}
-section.comments.on-site form .form-actions {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000330}}
+section.comments.on-site div.form form .form-actions {
   border: none;
   margin-top: 0;
   padding-top: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000320}}
-section.comments.on-site #div_id_honeypot {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000335}}
+section.comments.on-site div.form form .control-label {
   display: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000326}}
-section.comments.on-site section.listing .item {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000341}}
+section.comments.on-site div.listing .item {
   border: none;
   padding: 5px;
   margin: 5px 0;
@@ -13998,31 +14025,31 @@ section.comments.on-site section.listing .item {
   border-bottom: 1px solid #ececec;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_mixins\.sass}line{font-family:\0000313}}
-section.comments.on-site section.listing .item:before, section.comments.on-site section.listing .item:after {
+section.comments.on-site div.listing .item:before, section.comments.on-site div.listing .item:after {
   display: table;
   content: "";
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/bootstrap\/_mixins\.sass}line{font-family:\0000317}}
-section.comments.on-site section.listing .item:after {
+section.comments.on-site div.listing .item:after {
   clear: both;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000332}}
-section.comments.on-site section.listing .item img {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000347}}
+section.comments.on-site div.listing .item img {
   width: 48px;
   height: 48px;
   float: left;
   margin-right: 10px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000340}}
-section.comments.on-site section.listing .item.media {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000355}}
+section.comments.on-site div.listing .item.media {
   background: #f3f0fb;
   border-bottom: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000345}}
-section.comments.on-site section.listing .comment-text, section.comments.on-site section.listing .comment-text > p {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000360}}
+section.comments.on-site div.listing .comment-text, section.comments.on-site div.listing .comment-text > p {
   color: green;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000348}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_comment\.sass}line{font-family:\0000363}}
 section.comments.on-site div.listing.comment {
   display: none;
 }
@@ -14034,7 +14061,19 @@ div.notification-holder {
   right: 20px;
   min-width: 400px;
   z-index: 1000;
-  background: green;
+  background: #fafafa;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\000039}}
+div.notification-holder .message {
+  border-bottom: 1px solid white;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000313}}
+div.notification-holder .message .row-fluid > div > span, div.notification-holder .message .row-fluid > div > a {
+  padding: 4px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_notification\.sass}line{font-family:\0000315}}
+div.notification-holder .message .row-fluid > div > span.target, div.notification-holder .message .row-fluid > div > a.target {
+  font-weight: bold;
 }
 
 /* qTip2 - Pretty powerful tooltips - v2.0.1-4-g
