--- a/website/site-static/sass/_search.sass
+++ b/website/site-static/sass/_search.sass
@@ -1,20 +1,23 @@
 /* search */
 
 div.autocomplete
+
   &.holder
     position: absolute
-    width: 100%
+    width: 830px
     background-color: whiteSmoke
     z-index: 1001
-    margin-top: 36px
+    margin-top: 0px
 
-    
     .result
       padding: 0
       border: 1px solid #999
+      border-top: none
+      border-right: 1px solid #cccccc
       
       h1, h2, h3
         font-size: 12px !important
+        line-height: 15px !important
       
       .linkable
         cursor: pointer
@@ -26,6 +29,10 @@ div.autocomplete
           margin-bottom: 0px !important
       
       .listing
+      
+        max-height: 491px
+        overflow: auto
+      
         .item
           border-top: 1px solid #CCC
           background-repeat: no-repeat
@@ -39,17 +46,25 @@ div.autocomplete
             margin-bottom: 0px !important
           
           .related
-            h3
+          
+            > span
               float: left
               margin-right: 4px
               text-transform: none
+              
+            ul
+              list-style: none !important
+              li
+                margin-right: 10px
           
           em.highlight
             background: #DDFFD9
-            color: #0b0
-            padding: 0 2px
-            font-style: normal
-          
+            //color: #0b0
+            padding: 0px
+            //font-style: normal
+            //text-decoration: underline
+            font-style: italic
+            
           &.hover
             background-color: #DDFFD9
             // color: #0b0
