--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -36,6 +36,8 @@
 	
 	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.autocomplete.js"></script>-->{% endaddtoblock %}
 	
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/nunjucks/nunjucks-dev.js"></script>{% endaddtoblock %}
+	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.daterangepicker.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.countdown.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.smartupdater.js"></script>{% endaddtoblock %}
