--- a/website/site-static/css/admin.css
+++ b/website/site-static/css/admin.css
@@ -1,31 +1,51 @@
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\000031}}
 body {
-  font-family: verdana; }
+  font-family: verdana;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\000034}}
 #header {
   background-color: #333940;
-  border-bottom: solid 3px #999999; }
+  border-bottom: solid 3px #999999;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\000038}}
 #branding h1 {
-  color: white; }
+  color: white;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000311}}
 .module h2, .module caption, .inline-group h2 {
   background: #cccccc url(/admin_media/img/admin/nav-bg.gif) bottom left repeat-x;
-  color: #333940; }
+  color: #333940;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000316}}
 a.section:link, a.section:visited {
-  color: #666666; }
+  color: #666666;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000319}}
 a:link, a:visited {
   color: #00aeff;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000324}}
 #header {
-  color: magenta; }
+  color: magenta;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000328}}
 .module {
-  border: 1px solid #c3c3c3; }
-  .module table caption, .module h2 caption {
-    background-image: none;
-    background-color: #c3c3c3; }
-    .module table caption a, .module h2 caption a {
-      color: #333333 !important; }
+  border: 1px solid #c3c3c3;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000331}}
+.module table caption, .module h2 caption {
+  background-image: none;
+  background-color: #c3c3c3;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/admin\/_base\.sass}line{font-family:\0000334}}
+.module table caption a, .module h2 caption a {
+  color: #333333 !important;
+}
