--- a/website/apps/importer/templates/importer/import_form.html
+++ b/website/apps/importer/templates/importer/import_form.html
@@ -1,29 +1,81 @@
-{% extends "base/generic.html" %}
+{% extends "layout_edit.html" %}
 
-{% load i18n sekizai_tags verbatim dajaxice_templatetags %}
+{% load i18n sekizai_tags verbatim dajaxice_templatetags straight_include mustache pushy_tags %}
 
 {% block object_type %}import{% endblock %}
 
-{% block list_inner %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/multiuploader/application.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tmpl.min.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/tmpl.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/multiuploader/jquery.iframe-transport.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/multiuploader/jquery.fileupload.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/multiuploader/jquery.fileupload-ui.js"></script>{% endaddtoblock %}
 
-{# backbone requirements #}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/backbone/underscore-min.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/backbone/backbone-min.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/backbone/backbone-tastypie.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/backbone/ICanHaz.min.js"></script>{% endaddtoblock %}
+{% block heading %} <!-- heading / icon (large one) -->
+
+{% addtoblock "js-post" %}{% pushy_scripts %}{% endaddtoblock %}
+
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/tmpl.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/jquery.iframe-transport.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/jquery.fileupload.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/jquery.fileupload-fp.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/jquery.fileupload-ui.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/locale.js"></script>{% endaddtoblock %}
+{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/lib/fileupload/main.js"></script>{% endaddtoblock %}
+<div id="heading">
+	{% include "skeleton/heading.html" %}
+</div>
+<!-- heading / icon (large one) -->
+{% endblock %}
+
+{% block modnav %} <!-- start: intra-module navigation -->
+<div id="modnav">
+	{% include "skeleton/modnav.html" %}
+</div>
+<!-- end: intra-module navigation -->
+{% endblock %}
+
+{% block inner %}
+<div class="item_detail" style="">
+
+	<section>
+		<div class="row">
+			<div>&nbsp;</div>
+		</div>
+	</section>
+
+	<div class="clear"></div>
+
+</div>
+{% endblock %}
 
 
+{% block sidebar %}
+<div id="menu_context" class="menu_context">
+	<div class="set">
+		<ul class="unstyled">
+			
+			<li class="link ">
+				<span class="left icon"> <a href="{% url importer-import-list %}" title="{% trans "Back to Detail-View" %}">{% trans "Back to Imports" %}</a> </span>
+				<span class="opt"></span>
+				<span class="clear"></span>
+			</li>
 
 
+		</ul>
+	</div>
+</div>
+{% endblock %}
 
-{% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>{% endaddtoblock %}
+
+{% block form %}
+
+{% addtoblock "js-head" %}
+<script type="text/javascript">
+	IMPORTFILE_API = "{% url api_dispatch_list api_name="v1" resource_name="importfile" %}?import_session={{ object.pk }}";
+	{% if data %}
+	app = {loaded: true};
+	{% endif %}
+</script>
+{% endaddtoblock %}
+
+
+{% addtoblock "js-post" %}<!--{% dajaxice_js_import %}-->{% endaddtoblock %}
+{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}dajax/jquery.dajax.core.js"></script>-->{% endaddtoblock %}
 
 {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}importer/js/base.js"></script>{% endaddtoblock %}
 
@@ -31,72 +83,39 @@
 
 {% addtoblock "css" %}<link rel="stylesheet" href="{{ STATIC_URL }}css/lib/multiuploader/jquery.fileupload-ui.css">{% endaddtoblock %}
 
+{% addtoblock "js-post" %}
+    <script type="text/html" id="tweetTemplate">
+      {% straight_include "importer/tweetTemplate.mustache" %}
+    </script>
 
+    <script type="text/html" id="listApp">
+      {% straight_include "importer/listApp.mustache" %}
+    </script>
+
+    <script type="text/html" id="detailApp">
+      {% straight_include "importer/detailApp.mustache" %}
+    </script>
+{% endaddtoblock %}
 
 {% addtoblock "js-post" %}
 <script type="text/javascript">
+
 $(document).ready(function() {
+	
+	
 	$(function () {
-	    'use strict';
-	
-	    // Initialize the jQuery File Upload widget:
-	    
-	    var upload_form = $('form#fileupload')
-	    
-	    upload_form.fileupload();
-	
-	    upload_form.fileupload('option', {
+
+		importer.ui = new ImporterUi();
+		importer.ui.api_url = "{% url api_dispatch_list resource_name='import' api_name='v1'%}{{ object.id }}/";
+		importer.ui.fileupload_id = 'fileupload';
+		importer.ui.fileupload_options = {
 	        maxFileSize: 1000000000, // 1000 MB
 	        minFileSize: 200000,
-	        //acceptFileTypes: /(\.|\/)(gif|jpe?g|png)$/i,
-	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|ogg|jpe?g)$/i
-	    });
-	
-	
-	    // Load existing files:
-	    $.getJSON($('form#fileupload').prop('action'), function (files) {
-	        var fu = $('#fileupload').data('fileupload');
-	        fu._adjustMaxNumberOfFiles(-files.length);
-	        fu._renderDownload(files)
-	            .appendTo($('#fileupload .files'))
-	            .fadeIn(function () {
-	                // Fix for IE7 and lower:
-	                $(this).show();
-	            });
-	    });
-	    
-
-	    
-	    function get_import_files_interval() {
-	    	Dajaxice.importer.get_import(get_import_files_callback);
-	    };
-	    function get_import_files_callback(data) {
-	    	console.log(data);
-	    	
-	    	for (var i in data) {
-	    		
-				var item = data[i];
-				
-				if(item.status > 0) {
-					$('#importfile_' + item.id).hide(2000);
-				} else {
-					$('#importfile_' + item.id).show(2000);
-				}
-	    		
-	    	};
-	    	
-	    	
-	    };
-	    //setInterval(get_import_files_interval, 2000);
-	    
-	    
-	    // Dajaxice.alibrary.api_lookup(self.api_lookup_callback, data);
-	
-		importer.ui = new ImporterUi();
-		
-		importer.ui.api_url = "{% url api_dispatch_list resource_name='import' api_name='v1'%}{{ object.id }}";
-		
-		importer.ui.init();
+	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|ogg|jpe?g)$/i,
+	        limitConcurrentUploads: 10
+	   };
+	   
+	   importer.ui.init();
 	
 
 	
@@ -105,14 +124,12 @@ $(document).ready(function() {
 </script>
 {% endaddtoblock %}
 
+
+<div class="item_inner">
+
 <section>
 	
 	<div class="page-header">
-
-		<!--
-		<h1>{% url api_dispatch_list resource_name='import' api_name='v1'%}{{ object.id }}/</h1>
-		-->
-		
 		<h2>{% trans "Upload" %} <small>{% trans "Add/Upload Files to the Import Queue" %}</small></h2>
 	</div>
 	<div>
@@ -120,14 +137,13 @@ $(document).ready(function() {
 	</div>
 
 	<div class="uploader">
-		<form id="fileupload" action="{% url importer-upload-multi object.id %}" method="POST" enctype="multipart/form-data">
-	        <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
-	        
+		
+		<form id="fileupload" action="{% url api_dispatch_list api_name="v1" resource_name="importfile" %}?import_session={{ object.pk }}" method="POST" enctype="multipart/form-data">
+    
 	        <input type="hidden" id="import_api_url"  value="{% url api_dispatch_list resource_name='import' api_name='v1'%}{{ object.id }}" />
 	        
 	        <div class="fileupload-buttonbar">
 
-	                <!-- The fileinput-button span is used to style the file input field as button -->
 	                <span class="btn btn-success fileinput-button">
 	                    <i class="icon-plus icon-white"></i>
 	                    <span> Add Files</span>
@@ -137,29 +153,9 @@ $(document).ready(function() {
 	                    <i class="icon-upload icon-white"></i>
 	                    <span> Start upload</span>
 	                </button>&nbsp;&nbsp;
-	                <button type="reset" class="btn btn-warning cancel">
-	                    <i class="icon-ban-circle icon-white"></i>
-	                    <span> Cancel upload</span>
-	                </button>
-	                <!--
-	                <button type="button" class="btn btn-danger delete">
-	                    <i class="icon-trash icon-white"></i>
-	                    <span> Delete</span>
-	                </button>
-	                <input type="checkbox" class="toggle">
-					-->
-	            <!-- The global progress information
-	            <div class="span5 fileupload-progress fade">
-	                <div class="progress progress-success progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
-	                    <div class="bar" style="width:0%;"></div>
-	                </div>
-	                <div class="progress-extended">&nbsp;</div>
-	            </div> -->
+
 	        </div>
-	        <!-- The loading indicator is shown during file processing -->
-	        <div class="fileupload-loading"></div>
-	        <br>
-	        <!-- The table listing the files available for upload/download -->
+
 	        <table role="presentation" class="table table-striped table-condensed"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody></table>
 	    </form>
     </div>
@@ -178,253 +174,36 @@ $(document).ready(function() {
 
 </section>
 
-
-
-
-{% verbatim %}
-
-
-
-<script id="template-upload" type="text/x-jquery-tmpl">
-    <tr class="template-upload {{if error}} ui-state-error{{/if}}">
-        <td class="preview"><span class="fade"></span></td>
-        <td class="name"><span>${name}</span></td>
-        <td class="size"><span>${sizef}</span></td>
-        {{if error}}
-            <td class="error" colspan="2">Error:
-                {{if error === 'maxFileSize'}}File is too big
-                {{else error === 'minFileSize'}}File is too small
-                {{else error === 'acceptFileTypes'}}Filetype not allowed
-                {{else error === 'maxNumberOfFiles'}}Max number of files exceeded
-                {{else}}${error}
-                {{/if}}
-            </td>
-        {{else}}
-            <td>
-                <div class="progress progress-success progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="bar" style="width:0%;"></div></div>
-            </td>
-            <td class="start">
-                <button class="btn btn-mini btn-primary pull-right">
-                    <i class="icon-upload icon-white"></i>
-                    <span> Start</span>
-                </button>
-            </td>
-        {{/if}}
-
-        <td class="cancel">
-            <button class="btn btn-mini btn-warning pull-right">
-                <i class="icon-ban-circle icon-white"></i>
-                <span> Cancel</span>
-            </button>
-        </td>
-    </tr>
-</script>
-
-
-<script id="template-download" type="text/x-jquery-tmpl">
-    <tr id="importfile_${id}" class="template-download{{if error}} ui-state-error{{/if}}">
-        {{if error}}
-            <td></td>
-            <td class="name"><span>${name}</span></td>
-            <td class="size"><span>${sizef}</span></td>
-            <td class="error" colspan="2">Error:
-                {{if error === 1}}File exceeds upload_max_filesize (php.ini directive)
-                {{else error === 2}}File exceeds MAX_FILE_SIZE (HTML form directive)
-                {{else error === 3}}File was only partially uploaded
-                {{else error === 4}}No File was uploaded
-                {{else error === 5}}Missing a temporary folder
-                {{else error === 6}}Failed to write file to disk
-                {{else error === 7}}File upload stopped by extension
-                {{else error === 'maxFileSize'}}File is too big
-                {{else error === 'minFileSize'}}File is too small
-                {{else error === 'acceptFileTypes'}}Filetype not allowed
-                {{else error === 'maxNumberOfFiles'}}Max number of files exceeded
-                {{else error === 'uploadedBytes'}}Uploaded bytes exceed file size
-                {{else error === 'emptyResult'}}Empty file upload result
-                {{else}}${error}
-                {{/if}}
-            </td>
-        {{else}}
-            <td class="status">
-                <i class="icon-time"></i>
-            </td>
-            <td class="name">
-                <a href="${url}"{{if thumbnail_url}} target="_blank"{{/if}}>${name}</a>
-            </td>
-            <td class="size"><span class="pull-right">${sizef}</span></td>
-            <td colspan="3">* ${id} *</td>
-        {{/if}}
-
-		<!--
-        <td class="delete">
-            <button class="btn btn-mini btn-primary pull-right">
-                <i class="icon-ban-circle icon-white"></i>
-                <span> Delete</span>
-            </button>
-        </td>
-       -->
-    </tr>
-</script>
-
-
-<script type="text/x-tmpl" id="tmpl-demo">
-	
-<div id="importfile_result_{%=o.id%}" class="importfile item">
-	<h3><i class="icon-barcode"></i> {%=o.filename%}  <small>[{%=o.mimetype%}]</small></h3>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<div class="row-fluid result-set provider-tag">
-		
-		<div class="span1">
-			ID3 /
-			Vorbis
-		</div>
-		
-		
-		<div class="span4">
-			
-			<label class="checkbox holder-media_name">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">Title</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-			<div class="clearfix"></div>
-			
-			
-			<label class="checkbox holder-label_name">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">Label</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-
-		</div>
-		
-		<div class="span4">
-			
-			<label class="checkbox holder-artist_name">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">Artist</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-			<div class="clearfix"></div>
-			
-			
-			<label class="checkbox holder-release_catalognumber">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">CatNo</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-			
-		</div>
-		
-		<div class="span3">
-			
-			<label class="checkbox holder-media_tracknumber">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">TrackNo</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-			<div class="clearfix"></div>
-			
-			
-			<label class="checkbox holder-release_date">
-				<input type="checkbox">
-					<ul class="horizontal unstyled">
-						<li class="key">Date</li>
-						<li class="value"></li>
-					</ul>
-			</label>
-			
-		</div>
-		
-	</div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	<div class="row-fluid pull-righ result-actions">
-
-			<div class="btn-group pull-right">
-				<button class="btn btn-mini btn-prrimary">
-					Actions
-				</button>
-				<button class="btn btn-mini  btn-prrimary dropdown-toggle" data-toggle="dropdown">
-					<span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="}">Detail</a>
-					</li>
-					<li>
-						<a href="#">Another action</a>
-					</li>
-					<li>
-						<a href="#">Something else here</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#">Separated link</a>
-					</li>
-				</ul>
-			</div>
-	</div>
-	
-	
-		
 </div>
 
+<script id="template-upload" type="text/x-tmpl">
+{% straight_include "importer/template-upload.html" %}
+</script>
+
+<!-- Not used a.t.m. -->
+<script id="template-download" type="text/x-tmpl">
+{% straight_include "importer/template-download.html" %}
+</script>
+
+<!-- The template to handle the ImportFiles -->
+<script id="template-import" type="text/x-tmpl">
+{% straight_include "importer/template-import.html" %}
+</script>
+
+<!-- The template to handle the musicbrainz results -->
+<script id="template-result-musicbrainz" type="text/x-tmpl">
+{% straight_include "importer/template-result-musicbrainz.html" %}
+</script>
+
+<script id="template-result-imported" type="text/x-tmpl">
+{% straight_include "importer/template-result-imported.html" %}
 </script>
 
 
+{% endblock %}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{% endverbatim %}
-
+{% block form_sidebar %}
+<div class="sidebar form-sidebar holder">
+	{% include "importer/form_import/_form_sidebar.html" %}
+</div>
 {% endblock %}
